--- a/market-ajh/templates/news/index.html.twig
+++ b/market-ajh/templates/news/index.html.twig
@@ -6,6 +6,6 @@
 {% block body %}
   <div class="p-8">
     <h1 class="text-2xl mb-4">Gestion des nouvelles</h1>
-    <a href="{{ path('app_news_create') }}" class="bg-VIOLET text-white py-2 px-4 rounded-md">Créer une nouvelle</a>
+    <a href="{{ path('app_news_create') }}" class="bg-VIOLET text-WHITE py-2 px-4 rounded-md">Créer une nouvelle</a>
   </div>
 {% endblock %}
