--- a/market-ajh/templates/shop/list.html.twig
+++ b/market-ajh/templates/shop/list.html.twig
@@ -45,7 +45,7 @@
                                                         >
                                                         <input type="hidden" name="item_id" value="{{ gi.id }}">
                                                         
-                                                        <button type="submit" class="bg-VIOLET text-white px-4 py-2 rounded hover:bg-VIOLET-dark transition">
+                                                        <button type="submit" class="bg-VIOLET text-WHITE px-4 py-2 rounded hover:bg-VIOLET-dark transition">
                                                                 Commander
                                                         </button>
                                                 </form>
