--- a/market-ajh/templates/home/welcome.index.html.twig
+++ b/market-ajh/templates/home/welcome.index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="flex-col flex justify-center items-center h-screen">
-    <div class="text-center bg-GREEN text-white p-8 rounded-lg shadow-lg">
+    <div class="text-center bg-GREEN text-WHITE p-8 rounded-lg shadow-lg">
         <h1 class="text-4xl font-bold mb-4">Bienvenue sur le market de la guilde Ah-Jin!</h1>
         <img src="{{ asset('build/images/logo_guilde.jpg') }}" alt="Logo de la guilde" class="w-1/4 h-auto mb-6 mx-auto">
 
