--- a/market-ajh/templates/news/create.html.twig
+++ b/market-ajh/templates/news/create.html.twig
@@ -28,7 +28,7 @@
     
     {{ form_rest(form) }}
 
-    <button type="submit" class="w-full bg-VIOLET text-white py-2 px-4 rounded-md hover:bg-blue-600 transition duration-200">
+    <button type="submit" class="w-full bg-VIOLET text-WHITE py-2 px-4 rounded-md hover:bg-blue-600 transition duration-200">
       Créer
     </button>
   {{ form_end(form, { render_rest: false }) }}
