--- a/market-ajh/templates/other/contact.html.twig
+++ b/market-ajh/templates/other/contact.html.twig
@@ -25,7 +25,7 @@
             
             <div>
                 <button type="submit"
-                        class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-VIOLET">
+                        class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-WHITE bg-VIOLET">
                     Envoyer le message
                 </button>
             </div>
