--- a/market-ajh/templates/profile/index.html.twig
+++ b/market-ajh/templates/profile/index.html.twig
@@ -73,7 +73,7 @@
             <dialog id="discordDialog" aria-labelledby="discord-dialog-title" class="fixed inset-0 size-auto max-h-none max-w-none overflow-y-auto bg-transparent backdrop:bg-transparent">
                 <el-dialog-backdrop class="fixed inset-0 bg-gray-900/50 transition-opacity data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in"></el-dialog-backdrop>
                 <div tabindex="0" class="flex min-h-full items-end justify-center p-4 text-center focus:outline-none sm:items-center sm:p-0">
-                    <el-dialog-panel class="relative transform overflow-hidden rounded-lg bg-GREEN text-left shadow-xl outline outline-offset-1 outline-white/10 transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-lg data-closed:sm:translate-y-0 data-closed:sm:scale-95">
+                    <el-dialog-panel class="relative transform overflow-hidden rounded-lg bg-GREEN text-left shadow-xl outline outline-offset-1 outline-WHITE/10 transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-lg data-closed:sm:translate-y-0 data-closed:sm:scale-95">
                         <form method="post" action="{{ path('app_user_edit_discord') }}">
                             <input type="hidden" name="_token" value="{{ csrf_token('edit_discord' ~ user.id) }}">
                             <div class="bg-GREEN px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
@@ -102,7 +102,7 @@
             <dialog id="minecraftDialog" aria-labelledby="minecraft-dialog-title" class="fixed inset-0 size-auto max-h-none max-w-none overflow-y-auto bg-transparent backdrop:bg-transparent">
                 <el-dialog-backdrop class="fixed inset-0 bg-gray-900/50 transition-opacity data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in"></el-dialog-backdrop>
                 <div tabindex="0" class="flex min-h-full items-end justify-center p-4 text-center focus:outline-none sm:items-center sm:p-0">
-                    <el-dialog-panel class="relative transform overflow-hidden rounded-lg bg-GREEN text-left shadow-xl outline outline-offset-1 outline-white/10 transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-lg data-closed:sm:translate-y-0 data-closed:sm:scale-95">
+                    <el-dialog-panel class="relative transform overflow-hidden rounded-lg bg-GREEN text-left shadow-xl outline outline-offset-1 outline-WHITE/10 transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-lg data-closed:sm:translate-y-0 data-closed:sm:scale-95">
                         <form method="post" action="{{ path('app_user_edit_minecraft') }}">
                             <input type="hidden" name="_token" value="{{ csrf_token('edit_minecraft' ~ user.id) }}">
                             <div class="bg-GREEN px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
@@ -131,7 +131,7 @@
             <dialog id="wallpaperDialog" aria-labelledby="wallpaper-dialog-title" class="fixed inset-0 size-auto max-h-none max-w-none overflow-y-auto bg-transparent backdrop:bg-transparent">
                 <el-dialog-backdrop class="fixed inset-0 bg-gray-900/50 transition-opacity data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in"></el-dialog-backdrop>
                 <div tabindex="0" class="flex min-h-full items-end justify-center p-4 text-center focus:outline-none sm:items-center sm:p-0">
-                    <el-dialog-panel class="relative transform overflow-hidden rounded-lg bg-GREEN text-left shadow-xl outline outline-offset-1 outline-white/10 transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-4xl data-closed:sm:translate-y-0 data-closed:sm:scale-95 max-h-5/6">
+                    <el-dialog-panel class="relative transform overflow-hidden rounded-lg bg-GREEN text-left shadow-xl outline outline-offset-1 outline-WHITE/10 transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-4xl data-closed:sm:translate-y-0 data-closed:sm:scale-95 max-h-5/6">
                         <form method="post" action="{{ path('app_user_change_wallpaper') }}">
                             <input type="hidden" name="_token" value="{{ csrf_token('change_wallpaper' ~ user.id) }}">
                             <div class="bg-GREEN px-4 pt-5 pb-4 sm:p-6 sm:pb-4 overflow-y-auto">
@@ -222,16 +222,16 @@
                             <td class="py-2 px-4">{{ commande.getTotal() }}</td>
                             {% if commande.statut == 'En attente de livraison' %}
                                 <td class="py-2 px-4">
-                                    <button command="show-modal" commandfor="confirmDeliverDialog_{{ commande.id }}" class="bg-VIOLET text-white px-4 py-2 mb-4 rounded">Marquer comme livrée</button>
+                                    <button command="show-modal" commandfor="confirmDeliverDialog_{{ commande.id }}" class="bg-VIOLET text-WHITE px-4 py-2 mb-4 rounded">Marquer comme livrée</button>
                                     <!-- Confirmation Modal -->
                                     {% if commande.idVendeur %}
-                                        <a href="{{ path('app_messages_conversation', {userId: commande.idVendeur.id}) }}" class="bg-VIOLET text-white px-4 mt-2 p-2 rounded py-2 rounded">Contacter le vendeur</a>
+                                        <a href="{{ path('app_messages_conversation', {userId: commande.idVendeur.id}) }}" class="bg-VIOLET text-WHITE px-4 mt-2 p-2 rounded py-2 rounded">Contacter le vendeur</a>
                                     {% endif %}
                                     <el-dialog>
                                     <dialog id="confirmDeliverDialog_{{ commande.id }}" aria-labelledby="confirm-deliver-dialog-title" class="fixed inset-0 size-auto max-h-none max-w-none overflow-y-auto bg-transparent backdrop:bg-transparent">
                                         <el-dialog-backdrop class="fixed inset-0 bg-gray-900/50 transition-opacity data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in"></el-dialog-backdrop>
                                             <div tabindex="0" class="flex min-h-full items-end justify-center p-4 text-center focus:outline-none sm:items-center sm:p-0">
-                                                <el-dialog-panel class="relative transform overflow-hidden rounded-lg bg-GREEN text-left shadow-xl outline outline-offset-1 outline-white/10 transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-lg data-closed:sm:translate-y-0 data-closed:sm:scale-95">
+                                                <el-dialog-panel class="relative transform overflow-hidden rounded-lg bg-GREEN text-left shadow-xl outline outline-offset-1 outline-WHITE/10 transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-lg data-closed:sm:translate-y-0 data-closed:sm:scale-95">
                                                     <div class="bg-GREEN px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                                                         <div class="sm:flex sm:items-start">
                                                             <div class="mt-3 text-center sm:mt-0 sm:text-left w-full">
@@ -266,7 +266,7 @@
                                             <option value="4">4/5</option>
                                             <option value="5">5/5</option>
                                         </select>
-                                        <button type="submit" class="bg-VIOLET text-white px-4 py-2 rounded">Donner un avis</button>
+                                        <button type="submit" class="bg-VIOLET text-WHITE px-4 py-2 rounded">Donner un avis</button>
                                     </form>
                                 </td>
                             {% else %}
